Made the design of core-list more smooth and fixed the bad workaround. Thanks to https://stackoverflow.com/questions/27251551/why-does-core-list-doesnt-set-a-height-within-a-core-header-panel Added demo page (demo.html) and documentation page (index.html) to elements/ivx-page-surveylist.

--- a/src/app/elements/ivx-page-surveylist/ivx-page-surveylist.scss
+++ b/src/app/elements/ivx-page-surveylist/ivx-page-surveylist.scss
@@ -5,21 +5,41 @@
 core-list {
   overflow: hidden;
   display: block;
-  height: 200px; /* this is just a bad workaround to display the ivx-main-content area instead of a blank page
-                    the real height value will be set through JavaScript by passing the `contentHeight` attribute
-                    of <ivx-main-content> in and set them. */
   margin: 0 auto;
 }
 
 .row {
-  background: lightblue;
+  padding: 20px;
   height: 120px;
   overflow: hidden;
   border-bottom: 1px #dedede solid;
+
+  .title {
+    font-size: 1.6rem;
+    font-weight: bold;
+    height: 2.4rem;
+    text-overflow: clip;
+    text-overflow: ellipsis;
+    text-overflow: " ...";
+    white-space: nowrap;
+    width: 80%;
+    overflow: hidden;
+  }
+
+  .questionCount {
+    font-size: 1.3rem;
+  }
 }
 
 .selected {
-  background: orange;
+  background: #258dc8; /* Old browsers */
+  background: -moz-linear-gradient(top,  #258dc8 0%, #258dc8 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#258dc8), color-stop(100%,#258dc8)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  #258dc8 0%,#258dc8 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #258dc8 0%,#258dc8 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #258dc8 0%,#258dc8 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  #258dc8 0%,#258dc8 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#258dc8', endColorstr='#258dc8',GradientType=0 ); /* IE6-9 */
 }
 
 .fab {
